--- a/src/app/collections/collections-home/collections-home.component.html
+++ b/src/app/collections/collections-home/collections-home.component.html
@@ -1,2 +1,2 @@
 <app-divider>Table Component</app-divider>
-<app-table></app-table>
+<app-table classNames = "striped celled"  [data]="data" [headers]="headers"></app-table>
