--- a/src/app/mods/modal/modal.component.html
+++ b/src/app/mods/modal/modal.component.html
@@ -1,5 +1,5 @@
 <div (click)="onCloseClick()" class="ui dimmer visible active">
-  <div class="ui modal visible active">
+  <div (click)="$event.stopPropagation()"  class="ui modal visible active">
     <i (click)="onCloseClick()" class="close icon">    
     </i>
       <div class="header">
@@ -10,7 +10,7 @@
           Some content for the modal window should go right here!
         </p>
       </div>
-      <div class="actions">
+      <div  class="actions">
         <button (click)="onCloseClick()" class="ui button">OK</button>
       </div>
     </div>
