make reuse modal

--- a/src/app/mods/modal/modal.component.html
+++ b/src/app/mods/modal/modal.component.html
@@ -3,15 +3,16 @@
     <i (click)="onCloseClick()" class="close icon">    
     </i>
       <div class="header">
-        MODAL!
+        <ng-content select="[modalTitle]"></ng-content>
       </div>
       <div class="content">
-        <p>
-          Some content for the modal window should go right here!
-        </p>
+        <ng-content></ng-content>
       </div>
-      <div  class="actions">
+      <div  class="actions actions-default">
         <button (click)="onCloseClick()" class="ui button">OK</button>
+      </div>
+      <div class="actions">
+        <ng-content select="[modalFooter]"></ng-content>
       </div>
     </div>
   </div>
