--- a/src/app/mods/mods-home/mods-home.component.html
+++ b/src/app/mods/mods-home/mods-home.component.html
@@ -9,3 +9,6 @@
     <button class="ui button" (click)="onClick()"> CLOSE ME!</button>
   </ng-container>
 </app-modal>
+
+<app-divider> Accordion Component</app-divider>
+<app-accordion></app-accordion>
