Create a list of accordion Elements

--- a/src/app/mods/accordion/accordion.component.html
+++ b/src/app/mods/accordion/accordion.component.html
@@ -1,1 +1,12 @@
-<p>accordion works!</p>
+<div class="ui accordion styled">
+  <ng-container *ngFor="let item of items">
+    <div class="title">
+      <i class="dropdown icon"></i>
+      {{ item.title}}
+    </div>
+    <div class="content active">
+      <p>{{ item.content }}</p>
+    </div>
+
+  </ng-container>
+</div>
